--- a/book/stylesheets/pdf.scss
+++ b/book/stylesheets/pdf.scss
@@ -100,9 +100,9 @@ a {
     text-decoration: none;
 }
 
-.table-of-contents {
-    color: black;
-}
+//.table-of-contents {
+//    color: black;
+//}
 
 table {
     border: 1px solid black;
